feat: 生产级改造 - 安全加固、前端架构重构、TipTap+Yjs CRDT协作编辑器
Phase 1 - 安全加固:
- 生产配置凭据改为环境变量，JWT密钥外部化
- CORS从通配符改为可配置域名
- WebSocket认证改为一次性票据系统（替代URL中的JWT）
- EditorServer从@ServerEndpoint重构为Spring TextWebSocketHandler
- 移除未使用的pagehelper和knife4j依赖

Phase 2 - 前端架构:
- 引入vue-router和pinia，1975行App.vue拆分为15个组件
- 路由: / (首页) 和 /doc/:docId (编辑器)
- Pinia stores: auth、document、editor

Phase 3 - TipTap + Yjs CRDT:
- 替换document.execCommand为TipTap编辑器（ProseMirror）
- 引入Yjs CRDT实现真正的冲突自由协作
- 新增y-websocket服务器（Node.js进程）
- 远程光标通过CollaborationCursor自动处理

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>